src/objects/APTS_Capture_LSO_Input_Config_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom object to configure settings like dropdown list values etc. for Capture LSO Input page while creating MSPA or Quotation from Account or Opportunity.</description>
    <fields>
        <fullName>APTS_DataValidationBatchSize__c</fullName>
        <description>This settings specifies size of Batch Job for Validating data</description>
        <label>DataValidationBatchSize</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Default_SAP_Customer_ID__c</fullName>
        <description>Default SAP Customer ID field to hold the dummy SAP customer ID in case when it is blank in Apttus LSO record.</description>
        <label>Default SAP Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Distribution_Channel_Values__c</fullName>
        <description>Field to hold different values of Distribution Channel to be shown on Capture LSO Input page.</description>
        <inlineHelpText>Enter different values of Distribution Channel separated by comma &quot;, &quot;
For example, BT, NI, DT, VD etc.</inlineHelpText>
        <label>Distribution Channel Values</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GlobalProductReport__c</fullName>
        <description>Report for Global-Product</description>
        <label>GlobalProductReport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalProductReport__c</fullName>
        <description>Local Product Report Link</description>
        <label>LocalProductReport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Hierachy_Report__c</fullName>
        <description>This field contains report link for local-Hierarchy object</description>
        <label>Local Hierachy Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_Record_Type__c</fullName>
        <description>Field to hold the value of MSPA record type. This value will be used while creating MSPA object after clicking on Next button on Capture LSO Input page.</description>
        <inlineHelpText>Specify country/division specific record type for MSPA to be created from Opportunity or Account.</inlineHelpText>
        <label>MSPA Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ProductLineTreeReport__c</fullName>
        <label>ProductLineTreeReport</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Stage_Local_Operational_Data__c</fullName>
        <label>APTS Stage Local Operational Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Record_Type__c</fullName>
        <description>Field to hold the value of Quotation record type. This value will be used while creating Quotation object after clicking on Next button on Capture LSO Input page.</description>
        <inlineHelpText>Specify country/division specific record type for Quotation to be created from Opportunity or Account.</inlineHelpText>
        <label>Quotation Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Division_Values__c</fullName>
        <description>Field to hold different values of SAP Division to be shown on Capture LSO Input page.</description>
        <inlineHelpText>Enter different values of SAP Division separated by comma &quot;, &quot; 
For example, ZZ, xx etc.</inlineHelpText>
        <label>SAP Division Values</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Organization_Values__c</fullName>
        <description>Field to hold different values of Sales Organization (if any) to be shown on Capture LSO Input page.</description>
        <inlineHelpText>Enter different values of Sales Organization separated by comma &quot;, &quot; 
For example, ABB, LP Spain etc.</inlineHelpText>
        <label>Sales Organization Values</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Stage_MSPA_Approval__c</fullName>
        <description>Report link for Stage MSPA Approval</description>
        <label>Stage MSPA Approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Stage_MSPA_LineItems__c</fullName>
        <description>Report link for Stage MSPA LineItems</description>
        <label>Stage MSPA LineItems</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Stage_MSPA__c</fullName>
        <description>Report link for Stage MSPA object</description>
        <label>Stage MSPA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Staging_Approval_Matrix__c</fullName>
        <description>This custom field contains report value for Staging Approval Matrix Object</description>
        <label>Staging Approval Matrix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Staging_Master_Pick_List__c</fullName>
        <description>Report link for Staging Master-Pick List Object</description>
        <label>Staging Master Pick List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Capture LSO Input Config Settings</label>
</CustomObject>